# appgarden

./: .env.sample  .gitignore  CLAUDE.md  NBLITE_INSTRUCTIONS.md  PROJECT_PLAN.md  PROJECT_SPEC.md  README.md  SKILL.md  nblite.toml  pyproject.toml  run_integration_tests.sh
.claude/skills/appgarden/: SKILL.md
.github/workflows/: ci.yml  release.yml
dev_scripts/: clean-project  publish-new  run-tests
pts/appgarden/: 00_config.pct.py  01_remote.pct.py  02_ports.pct.py  03_routing.pct.py  04_server.pct.py  05_deploy.pct.py  06_apps.pct.py  07_auto_docker.pct.py  08_environments.pct.py  09_tunnel.pct.py  10_cli.pct.py
pts/tests/: test_apps.pct.py  test_auto_docker.pct.py  test_config.pct.py  test_deploy.pct.py  test_environments.pct.py  test_ports.pct.py  test_privileged_wrapper.pct.py  test_remote.pct.py  test_routing.pct.py  test_server.pct.py  test_tunnel.pct.py  test_validate.pct.py
pts/tests/integration/: conftest.pct.py  test_server_init.pct.py
src/appgarden/: apps.py  auto_docker.py  cli.py  config.py  deploy.py  environments.py  ports.py  remote.py  routing.py  server.py  tunnel.py
src/appgarden/templates/: Caddyfile.static.j2  Caddyfile.subdirectory.j2  Caddyfile.subdomain.j2  Dockerfile.j2  appgarden-privileged  docker-compose.yml.j2  systemd.service.j2
src/tests/: test_apps.py  test_auto_docker.py  test_config.py  test_deploy.py  test_environments.py  test_ports.py  test_privileged_wrapper.py  test_remote.py  test_routing.py  test_server.py  test_tunnel.py  test_validate.py
src/tests/integration/: conftest.py  test_server_init.py
test_app/: Dockerfile  app.py  appgarden.toml  deploy.sh  test.sh
